refactored html:  now renders stacked items

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Shopping Cart</h1>
     <p id="total"></p>
-    <p id="receipt"></p>
+    <pre id="receipt"></pre>
 </body>
 </html>
